# desafio-backend3-alura-rs

./: .env  Cargo.toml  README.md  rocket.toml
migrations/2022-04-21-235740_users/: up.sql
migrations/2022-04-22-002249_transactions/: up.sql
migrations/2022-04-22-002257_import_history/: down.sql  up.sql
src/: controller.rs  main.rs  model.rs  schema.rs  vars.rs
src/controller/: import_history.rs  index.rs  login.rs  mod.rs  process_uploaded_file.rs
src/guards/: auth_guard.rs
src/model/: context.rs  import_history.rs  mod.rs  transaction.rs  user.rs
src/repositories/: history_repository.rs  mod.rs  transactions_repository.rs  user_repository.rs
templates/: import_history.html.tera  index.html.tera  navbar.html.tera  upload_file.html.tera
templates/import_transactions/: import_history.html.tera  import_transaction_header.html.tera  import_transaction_index.html.tera  upload_file.html.tera
templates/login/: login_form.html.tera  login_header.html.tera  login_index.html.tera
templates/register_user/: register_form.html.tera  register_header.html.tera  register_index.html.tera
